--- a/frontend/src/app/features/dashboard/breakdowns/breakdowns.component.html
+++ b/frontend/src/app/features/dashboard/breakdowns/breakdowns.component.html
@@ -7,14 +7,7 @@
     >
       <div
         class="w-full md:w-auto flex flex-col md:flex-row space-y-2 md:space-y-0 items-stretch md:items-center justify-end md:space-x-3 flex-shrink-0"
-      >
-        <button
-          type="button"
-          class="flex items-center justify-center text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"
-        >
-          Zgłoś awarię
-        </button>
-      </div>
+      ></div>
       <div class="w-full md:w-1/2">
         <form class="flex items-center">
           <label for="simple-search" class="sr-only">Szukaj</label>
